# CasoIntegrador4

./: CMakeLists.txt  README.md  main.cpp
variant/: variant.cpp  variant.h
